--- a/frontend/src/app/admin/admin-orders/admin-orders.component.css
+++ b/frontend/src/app/admin/admin-orders/admin-orders.component.css
@@ -1,7 +1,9 @@
 .col {
     padding: 20px;
+    padding-bottom: 700px;
     font-family: 'Noto Sans', sans-serif;
     font-size: 14px;
+    height: 100%;
 }
 
 .headline {
@@ -34,12 +36,34 @@
 .cl {
     transition: 0.1s;
 }
-
-.col-3 {
+/*
+.col-2 {
     border-right: 1px solid #e0e0e0;
     background: #f7f7f7;
 }
+*/
 
+.col-2 {
+    padding-left: 0;
+    padding-right: 0;
+    position: relative;
+}
+
+.col-2:after {
+  content: " ";
+  display: block;
+  width: 4px;
+  height: 40px;
+  top: 302px;
+  left: 0;
+  background: #d93a3a;
+  position: absolute;
+}
+
+.col-10 {
+    box-shadow: inset 3px -5px 14px 0 #f5f5f5 ;
+    border-left: 1px solid #eeeeee;
+}
 
 .fas {
     cursor: pointer;
@@ -47,10 +71,6 @@
 
 input::placeholder {
     font-size: small;
-}
-
-.col-3 {
-    border-right: 1px solid #e0e0e0;
 }
 
 th {
@@ -74,68 +94,88 @@ table {
     border: none;
 }
 
-
-.popup {
-    margin: 100px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 13px;
-    width: 300px;
-    height: 150px;
-    position: relative;
-    transition: all 5s ease-in-out;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .popup .close {
-    position: absolute;
-    font-size: 15px;
-    text-decoration: none;
-    color: #d93a3a;
-    opacity: 1;
-    display: flex;
-    height: 21px;
-    width: 21px;
+  .change-view {
+    background: transparent;
+    width: 34px;
+    height: 34px;
+    border: none;
+    font-size: 18px;
     border-radius: 100px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    margin-top: -10px;
+    background: #f7f7f7;
+}
+
+.change-view:hover {
+    background: #ebebeb;
+}
+
+.change-view:after {
+    position: absolute;
+    width: 70px;
+    height: 24px;
+    content: " ";
+    display: flex;
+    border-radius: 8px;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-    box-shadow: 0 0 0 1px #d93a3a;
-    top: 5px;
-    right: 5px;
-    transition: 0.1s;
-  }
-  
-  .popup .close:hover {
+    background: #55555588;
+    left: 50%;
+    margin-left: -35px;
+    font-size: 12px;
     color: white;
-    background: #d93a3a;
-    top: 0px;
-    right: 0px;
-    height: 30px;
-    width: 30px;
+    transition: 0.2s;
+    opacity: 0;
+}
+
+.change-view:hover:after {
+    opacity: 1;
+    transform: translateY(8px);
+}
+
+.list-view:after {
+    content: "List View";
+}
+
+.card-view:after {
+    content: "Card View";
+}
+
+
+.besa {
+    margin-bottom: 20px;
+    display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
+
+input:placeholder-shown {
+    padding-left: 15px;
   }
   
-  .popup .content {
-      margin-bottom: 30px;
+
+
+  
+  h4 {
+    font-family: 'Share Tech Mono', monospace;
+    font-weight: 600;
   }
 
-  .btnn {
+  input {
+    border: 1px solid #e0e0e0;
+    box-shadow: 
+    3px 5px 14px 0 #f5f5f5; 
+    border-radius: 5px;
+    width: 50%;
+    font-size: small;
     height: 40px;
-    width: 100px;
-    border-radius: 50px;
-    background: rgb(227, 252, 178);
-    color: yellowgreen;
-    position: relative;
-    overflow: hidden;
-    border: 1px solid yellowgreen;
-    font-weight: 12px;
-  }
-  
-  .btnn:hover {
-   background: yellowgreen;
-   color: white;
-  }
-  
-  
+}
+
+
+input:focus  {
+    box-shadow: none;
+    border: 1px solid #242424;
+   }
