--- a/frontend/src/app/logo/logo.component.html
+++ b/frontend/src/app/logo/logo.component.html
@@ -8,5 +8,5 @@
             <div class="semi white"></div>
         </div>
 
-        <div class="title"> <i class="fas fa-heart" style="color: #d93a3a;"></i> <span style="color: #242424;"> POKESHOP</span>  </div>
+        <div class="title"> <span style="color: #242424;"> POKESHOP</span>  </div>
 </div>
