--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -33,11 +33,11 @@
         </tbody>
       </table>     
       
-      <div class="row no-gutters" style="margin-top: 70px; border-top: 1px solid #e0e0e0; padding-top: 30px" >
+      <div class="row no-gutters boro" >
       <div class="col-7" style="font-size: 13px;"></div>
       <div class="col-5" style="font-size: 25px; font-weight: bold; text-align: right;"> 
         Total <span style="font-size: 35px; color: #d93a3a;">$5.00</span>
-        <p style="font-size: 13px; color: #969696;">Not including shipping fee</p>
+        <p style="font-size: 13px; font-weight: 500;">INCLUDING 10% VAT</p>
        </div>
       </div>
 
@@ -45,5 +45,8 @@
     </div>
   </div>  
     
- 
+  <div class="row" style="height: 200px;">
+    <div class="col-4"></div>
+    <div class="col"></div>
+</div>
 </div>
