--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -1,40 +1,44 @@
 <div class="row">
-        <div class="col col-3" >
-        <ul class="list-group">
-            <div class="headline">
-                <span class="far fa-user-circle" style="margin-top: 10px;"></span><p>Admin </p> 
-            </div>
-            <li class="list-group-item cl" routerLink="/admin/users">Users</li>
-            <li class="list-group-item" style="font-weight: 700">Products</li>
-            <li class="list-group-item cl" routerLink="/admin/orders">Orders</li>
-            <li class="list-group-item cl" routerLink="/admin/products/new">Product form</li>
-        </ul>
+        <div class="col col-2" >
+        <admin-nav></admin-nav>
     </div>
-        <div class="col col-9">
+        <div class="col col-10">
                 <div class="besa">
-                    <button routerLink="/admin/products/new" class="btn check">New Product</button>
-           
-                <input type="search" class="form-control" placeholder="Search"></div>
-              <div class="container"> 
+                   
+           <h4>PRODUCTs</h4>
+                <input type="search" class="form-control" placeholder="Search by name">
+                <button routerLink="/admin/products/new" class="btn check">New Product</button>
+            </div>
+              <div class="container-fluid"> 
                    <table class="table">
                 <thead>
                     <tr>
-                        <th>Product Name</th>
-                        <th>Date</th>
-                        <th>Category</th>
-                        <th>Price</th>
+                        <th style="width: 5%;">Number</th>
+                        <th style="width: 25%;">Product Name</th>
+                        <th style="width: 20%;">Date</th>
+                        <th style="width: 20%;">Category</th>
+                        <th style="width: 10%;">Quantity</th>
+                        <th style="width: 10%;">Price</th>
                         <th style="width: 10%;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
+                        <td></td>
                         <td>FO-DR-JP-TI2004</td>
                         <td>FO-DR-JP-TI2004</td>
                         <td>FO, DR</td>
+                        <td>10 </td>
                         <td>$3.99</td>
                         <td style="font-size: 16px;">
-                            <a routerLink="/admin/products/new" style="color: yellowgreen;" class="far fa-edit fu"> </a>
-                            <span  data-toggle="modal" data-target="#myModal" class="far fa-trash-alt fu" style="color: #e73939; padding-left: 15px;"> </span>
+                            <a routerLink="/admin/products/new" 
+                            style="color: yellowgreen;" 
+                            class="far action edit fa-edit fu"> 
+                            </a>
+                            <span data-toggle="modal" data-target="#myModal" 
+                            class="far action delete fa-trash-alt fu" 
+                            style="color: #e73939; margin-left: 20px;"> 
+                        </span>
                         </td>
                     </tr>
                 </tbody>
@@ -94,16 +98,12 @@
         </div>
     </div>    
     --> 
-    <div class="row" style="height: 200px;">
-        <div class="col-3"></div>
-        <div class="col-9"></div>
-    </div>
-
 
     <div id="myModal" class="modal">
             <div class="popup">
-                <h6 style="text-align: center; margin-top: 20px; margin-bottom: 20px;letter-spacing: 1px; font-family: 'Noto Sans', sans-serif;">
-                    This product will be deleted!</h6>
+                <i class="far fa-question-circle fa-3x"></i>
+                <h4 class="are">Are you sure?</h4>
+                <p class="quote">This product will be deleted!</p>
                 <div class="close"  data-dismiss="modal"><i class="fas fa-times"></i></div>
                 <div class="content">
                    <button onclick="cancel()" data-dismiss="modal" class="btnn">CONFIRM</button>
