--- a/frontend/src/app/admin/product-form/product-form.component.html
+++ b/frontend/src/app/admin/product-form/product-form.component.html
@@ -1,34 +1,33 @@
 
     <div class="row">
-        <div class="col col-3">
-            <ul class="list-group">
-                <div class="headline">
-                    <span class="far fa-user-circle" style="margin-top: 10px;"></span>
-                    <p>Admin </p>
-                </div>
-            <li class="list-group-item cl" routerLink="/admin/users">Users</li>
-            <li class="list-group-item cl" routerLink="/admin/products">Products</li>
-            <li class="list-group-item cl" routerLink="/admin/orders">Orders</li>
-            <li class="list-group-item" style="font-weight: 700">Product form</li>
-         </ul>
+        <div class="col col-2">
+            <admin-nav></admin-nav>
         </div>
-        <div class="col col-9">
+        <div class="col col-10">
             <div class="container-fluid">
                 <div class="row">
 
                     <div class="col-6">
+               
+                        <h4>Information</h4>
                         <form [formGroup]="form">
-                            <div class="form-group">
-                                <label for="title">Title</label>
+                            <div class="row">
+                                <div class="form-group col-4">
+                                        <label for="number">Number</label>
+                                        <input id="number" type="text" class="form-control">
+                                    </div>
+
+                            <div class="form-group col-8">
+                                <label for="title" >Title</label>
                                 <input id="title" type="text" class="form-control">
                             </div>
-
+</div>
                             <div class="form-group">
-                                <label for="price">Price</label>
+                                <label for="price" class="pri">Price</label>
                                 <input id="price" type="text" class="form-control">
                             </div>
-                            <div class="type">    
-                                <div class="form-group fl-fo">
+                            <div class="row">    
+                                <div class="form-group col-6">
                                 <label for="category">Type 1</label>
                                 <select id="category" class="form-control">
                                         <option value="Type1">Type 1</option>
@@ -53,7 +52,7 @@
                                 </select>
                             </div>
 
-                            <div class="form-group fl-fo">
+                            <div class="form-group col-6">
                                     <label for="category">Type 2</label>
                                     <select id="category" class="form-control">
                                             <option value="Type2">Type 2</option>
@@ -80,23 +79,63 @@
                         
                         </div>
                         
+                        <div class="form-group">
+                                <label for="detail">Description</label>
+                                <textarea class="form-control"></textarea>
 
+                            </div>
+                       
                             <div class="form-group">
                                 <label for="imageURL">Image</label>
-                                <input id="imageURL" placeholder="Type image URL here or import from your computer" type="text" class="form-control">
-                            </div>
+                                <div class="input-group">
+                                    <div class="custom-file">
+                                      <input type="file" class="custom-file-input" id="inputGroupFile04">
+                                      <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+                                    </div>
+                                    <div class="input-group-append">
+                                      <button class="btnn" type="button">UPLOAD</button>
+                                    </div>
+                                  </div>
+                                    </div>
 
-                            <input type="reset" class="btn res" value="Reset">
+                            <input type="reset" class="res" value="RESET">
                         </form>
 
                         <div class="besa">
-                            <button class="btn clear">Delete</button>
-                            <button class="btn">Save</button>
+                            <button class="btn  del">Delete</button>
+                            <button class="btn ">Save</button>
                         </div>
                     </div>
-                    <div class="col"></div>
-                    <div class="col-5">
-                        
+
+
+
+
+
+
+
+                             <div class="col-6">
+                        <div class="card">
+                            <div class="card-body" style="border-bottom: 1px solid #e0e0e0; padding-bottom: 0px;">
+                                <h4>Preview</h4>
+                                <img class="card-img-top" src="https://img.pokemondb.net/artwork/large/bulbasaur.jpg" alt="">
+                                 
+                                <p class="p p-number">#001</p>
+                                <div class="main">
+                                    <p class="p-name">Bulbasaur</p>  
+                                    <p class="p-price">$5.00</p>  
+                                </div>  
+                                <div class="type">
+                                <p class="p-type1" >GRASS</p> <p>&nbsp;/&nbsp;</p>
+                                <p class="p-type2">POISON</p>
+                                </div> 
+                            </div>
+
+                            <div class="card-body" style="padding-top: 0px;">
+                                <p class="descrip"> Description</p>
+                                <p class="p p-detail">The cutest Pokemon</p>
+                            </div>
+                            
+                        </div>
                     </div>
 
 
@@ -106,8 +145,4 @@
 
             </div>
         </div>
-    </div>
-    <div class="row" style="height: 200px">
-        <div class="col-3"></div>
-        <div class="col-9"></div>
     </div>
