--- a/frontend/src/app/admin/users/users.component.css
+++ b/frontend/src/app/admin/users/users.component.css
@@ -1,14 +1,17 @@
 .col {
     padding: 20px;
+    padding-bottom: 200px;
     font-family: 'Noto Sans', sans-serif;
     font-size: 14px;
 }
 
 
-.container {
+.container-fluid {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
-    box-shadow: 3px 5px 10px 0 #f8f8f8;    
+    box-shadow: 
+  3px 5px 14px 0 #f5f5f5; 
+  
     margin-bottom: 20px;
     padding-top: 10px;
 }
@@ -69,35 +72,26 @@ input::placeholder {
     font-size: small;
 }
 
-button {
-    font-family: 'Share Tech Mono', monospace;
-    text-transform: uppercase;
-    background: #242424;
-    border-radius: 0;
-    border: none;
-    outline: none;
-    color: white;
-    font-weight: bold;
-    display: inline-block;
+.col-10 {
+    box-shadow: inset 2px -5px 14px 0 #f5f5f5 ;
+    border-left: 1px solid #eeeeee;
 }
 
-button:hover{
-    background: #faea0f;
-    color: #242424;
-    transition: .1s;
-}
-.col-3 {
-    border-right: 1px solid #e0e0e0;
-    background: #f7f7f7;
+.col-2 {
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
 }
 
-input {
-    border: 3px solid #242424;
-    outline: none;
-    border-radius: 0;
-    width: 50%;
-    font-size: small;
-    height: 100%;
+.col-2:after {
+  content: " ";
+  display: block;
+  width: 4px;
+  height: 40px;
+  top: 224px;
+  left: 0;
+  background: #d93a3a;
+  position: absolute;
 }
 
 th {
@@ -106,28 +100,13 @@ th {
     text-transform: uppercase;
 }
 
-input:focus  {
-    box-shadow: none;
-    border-color: #faea0f;
+h4 {
+  font-family: 'Share Tech Mono', monospace;
+  font-weight: 600;
 }
 
-input[type=search]::-webkit-search-cancel-button {
-    cursor: pointer;
-    -webkit-appearance: none;
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
-    background-repeat: no-repeat;
-    background-size: 14px;
-    width: 16px;
-    height: 14px;
-}
 
-.besa {
-    margin-bottom: 20px;
-    display: flex;
-flex-direction: row;
-justify-content: space-between;
 
-}
 
 
 
@@ -135,14 +114,16 @@ justify-content: space-between;
     margin: 100px auto;
     padding: 20px;
     background: #fff;
-    border-radius: 13px;
+    border-radius: 3px 15px 3px 3px ;
     width: 300px;
-    height: 150px;
+    height: 260px;
     position: relative;
     transition: all 5s ease-in-out;
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+
   }
   
   .popup .close {
@@ -158,19 +139,40 @@ justify-content: space-between;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0 0 0 1px #d93a3a;
     top: 5px;
     right: 5px;
     transition: 0.1s;
   }
+
+  .fa-question-circle{
+    color: yellowgreen;
+    opacity: 0.7;
+    margin-top: 30px;
+  }
+
+  .are {
+font-weight: 700;
+margin-top: 10px;
+margin-bottom: 0px;
+color: #242424;
+  }
+
+  .quote {
+      font-family: 'Noto Sans', sans-serif;
+font-size: 13px;
+margin-bottom: 30px;
+opacity: 0.6;
+letter-spacing: 1px;
+  }
   
   .popup .close:hover {
     color: white;
-    background: #d93a3a;
+    background: linear-gradient(to right, #d31027, #ea384d);
     top: 0px;
     right: 0px;
     height: 30px;
     width: 30px;
+    box-shadow: 0 3px 7px 0 rgba(255, 72, 72, 0.3);
   }
   
   .popup .content {
@@ -180,16 +182,24 @@ justify-content: space-between;
   .btnn {
     height: 40px;
     width: 100px;
-    border-radius: 50px;
-    background: rgb(227, 252, 178);
-    color: yellowgreen;
+    border-radius: 3px;
+    color: #fff;
+    font-weight: 700;
+    background: linear-gradient(to left, yellowgreen, rgb(173, 223, 73));
     position: relative;
-    overflow: hidden;
-    border: 1px solid yellowgreen;
-    font-weight: 12px;
+    border: none;
+    transition: 0.2s;
   }
   
   .btnn:hover {
-   background: yellowgreen;
-   color: white;
+    box-shadow:
+    0 3.4px 2.7px rgba(0, 0, 0, 0.012),
+    0 8.7px 6.9px rgba(0, 0, 0, 0.018),
+    0 17.7px 14.2px rgba(0, 0, 0, 0.022),
+    0 36.5px 29.2px rgba(0, 0, 0, 0.028),
+    0 100px 80px rgba(0, 0, 0, 0.04)
+  ;
+    background: linear-gradient(to left, yellowgreen, rgb(188, 233, 97));
   }
+  
+  
