--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -1,23 +1,19 @@
 
         <div class="row">
-            <div class="col col-3" >
-            <ul class="list-group">
-                <div class="headline">
-                    <span class="far fa-user-circle" style="margin-top: 10px;"></span><p>Admin </p> 
-                </div>
-                <li class="list-group-item" style="font-weight: 700">Users</li>
-                <li class="list-group-item cl" routerLink="/admin/products">Products</li>
-                <li class="list-group-item cl" routerLink="/admin/orders">Orders</li>
-                <li class="list-group-item cl" routerLink="/admin/products/new">Product form</li>
-            </ul></div>
-            <div class="col col-9">
-                <div class="container">
+            <div class="col col-2" >
+                <admin-nav></admin-nav>
+        </div>
+            <div class="col col-10">
+
+                    <h4>USERs</h4>
+                <div class="container-fluid">
+                   
                     <table class="table">
                     <thead>
                         <tr>
                             <th style="width: 10%;">Code</th>
-                            <th style="width: 20%;">Username</th>
                             <th style="width: 30%;">Email</th>
+                            <th style="width: 20%;">Name</th>
                             <th style="width: 20%;">Sign-Up Date</th>
                             <th style="width: 10%;">Orders</th>
                             <th style="width: 10%;">Actions</th>
@@ -39,21 +35,15 @@
                 </div>
             </div>
         </div>    
-        
-        <div class="row" style="height: 200px;">
-            <div class="col-3"></div>
-            <div class="col-9"></div>
-        </div>
-    
 
-        
-    <div id="myModal" class="modal">
-            <div class="popup">
-                <h6 style="text-align: center; margin-top: 20px; margin-bottom: 20px;letter-spacing: 1px; font-family: 'Noto Sans', sans-serif;">
-                    This user will be blocked!</h6>
-                <div class="close"  data-dismiss="modal"><i class="fas fa-times"></i></div>
-                <div class="content">
-                   <button onclick="cancel()" data-dismiss="modal" class="btnn">CONFIRM</button>
+        <div id="myModal" class="modal">
+                <div class="popup">
+                    <i class="far fa-question-circle fa-3x"></i>
+                    <h4 class="are">Are you sure?</h4>
+                    <p class="quote">This user will be blocked!</p>
+                    <div class="close"  data-dismiss="modal"><i class="fas fa-times"></i></div>
+                    <div class="content">
+                       <button onclick="cancel()" data-dismiss="modal" class="btnn">CONFIRM</button>
+                    </div>
                 </div>
             </div>
-        </div>
