--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -4,7 +4,7 @@ body {
 }
 
 footer {
-    height: 200px;
+    height: 450px;
     display: flex;
     align-items: flex-end;
     color: white;
@@ -17,13 +17,14 @@ footer {
 
 .container {
     text-align: center;
+    padding-bottom: 50px;
 }
 
 .co {
 display: flex;
 flex-direction: row;
 justify-content: center;
-margin-top: -10px; 
+margin-top: -5px; 
 color: #7a7a7a; 
 font-family: 'Noto Sans', sans-serif;
 }
