--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -1,53 +1,52 @@
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/">
-      <logo routerLink="/"></logo>
-    </a>
+<div class="navbar navbar-expand-lg">
+  <div class="row">
+    <div class="column">
+      <a class="navbar-brand" routerLink="/">
+        <logo routerLink="/"></logo>
+      </a>
 
-    <button class="navbar-toggler" 
-    type="button" 
-    data-toggle="collapse" 
-    data-target="#navbar"
-      aria-controls="navbar" 
-      aria-expanded="false" >
-      <span class="fa fa-bars"></span>
-    </button>
-   
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="navbar-nav">
 
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/shopping-cart">
-            <img src="https://cdn.onlinewebfonts.com/svg/img_223715.png" class="cart" style="width: 26px;" alt="">
-            <span class="badge badge-warning badge-pill">1</span>
-          </a>
-        </li>
+    </div>
+    <!--
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="bars"></span>
+  </button>-->
+    <div class="col">
 
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
+      <div class="container cuc">
+        <input type="search" class="search" placeholder="Search">
+      </div>
 
-        <li class="nav-item">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login"
+              style="margin-right: 10px; margin-left: -10px;">Login</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" routerLink="/sign-up">Sign-Up</a>
           </li>
 
-        <li ngbDropdown class="nav-item dropdown">
-          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">Username</a>
-          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-            <a class="dropdown-item logout" (click)="logout()">Log Out</a>
-          </div>
-        </li>
 
-      </ul>
-    
-       
+          <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
+          <li class="dropdown">
+            <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="firstname" *ngIf="anonymousUser"> Firstname </span> <i class="far fa-user"></i></a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+              <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+              <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+              <a class="dropdown-item logout" (click)="logout()">Log Out</a>
+            </div>
+          </li>
+        </ul>
+      </div>
 
+      <a class="nav-link cucu" routerLink="/shopping-cart">
+        <img src="https://cdn.onlinewebfonts.com/svg/img_223715.png" class="cart" style="width: 26px;" alt="">
+        <span class="badge badge-warning badge-pill">1</span>
+      </a>
     </div>
-
   </div>
-
-</nav>
+</div>
