--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -6,7 +6,7 @@
 
 .login-form {
     width:500px;
-    height: 550px;
+    height: 700px;
     background: transparent;
     padding: 20px;
 padding-top: 0;
@@ -24,6 +24,8 @@ input {
     border-radius: 2px;
     background: #f0f0f0;
     outline: none;
+    font-weight: 600;
+    font-size: 18px;
     }
     
     input:focus{
@@ -72,15 +74,73 @@ p{
     font-size: 17px;
     color: #999999;
     margin-left: 10px;
-    font-weight: 600;
+
 }
 
 p a {
     color: black;
     text-decoration:none ;
+    font-weight: 600;
 }
 
 p a:hover { 
     color: #d93a3a;
     cursor: pointer;
 }
+
+.register {
+    position: relative;
+}
+
+.register:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 2px;
+    height: 10px;
+    background: #242424;
+    top: 2px;
+    right: -5px;
+    transition: 0.1s;
+}
+
+.register:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: #242424;
+    bottom: 3px;
+    right: -5px;
+    transition: 0.1s;
+}
+
+
+.register:hover:after {
+    height: 9px;
+    right: -10px;
+    transform: rotate(-45deg);
+}
+
+.register:hover:before {
+    height: 9px;
+    right: -10px;
+    transform: rotate(45deg);
+}
+
+.alert {
+    text-align: right;
+    height: 30px;
+    border: none;
+    background: transparent;
+    border-radius: 0;
+    padding-top: 5px;
+    padding-right: 5px;
+    font-weight: 600;
+ }
+ 
+ .alert-danger {
+    color: #d93a3a;
+    border-top: 3px solid #d93a3a;
+ }
