--- a/frontend/src/app/order-card/order-card.component.html
+++ b/frontend/src/app/order-card/order-card.component.html
@@ -1,23 +1,77 @@
-<div class="container">
-    <div class="row">
-        <div class="column col-3">
-              
-            <div class="bulk">
-                <label class="dn" for="">NUMBER</label>
+
+<div class="container-fluid">
+        <div class="row"> 
+            <div class="col col-4">
+              <div class="top">
+                  <div class="bulk" style="flex:4">
+                <label for="">NUMBER</label>
                <P>#KAFHH03OIG </P>
             </div>  
-            <div class="date" >
-                <div class="bulk">
-                    <label class="dn" for="">DATE</label>
+                <div class="bulk" style="border-left: 1px solid #e0e0e0; flex:3">
+                    <label for="">DATE</label>
                     <p>12/12/19</p>
-                </div>
+            </div>
+        </div>
+            <div class="bulk">
+                <label for="">ORDER STATUS</label>
+                <p class="dash">___</p>
+
+                <label class="track s">Confirmed
+                        <input type="checkbox" checked="checked">
+                        <span class="checkmark"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                      </label>
+
+                      <label class="track s">Packed
+                            <input type="checkbox">
+                            <span class="checkmark"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                          </label>
+
+                          <label class="track s">Out for Delivery
+                                <input type="checkbox">
+                                <span class="checkmark"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                              </label>
+
+                              <label class="track s">Delivered
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                                  </label>
+
+                                  <label class="track s">Attempted Delivery
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                                  </label>
+
+                <!--
+                <label class="track s">Confirmed
+                        <input type="checkbox">
+                        <span class="checkmark far fa-circle"><span class="fas fa-check-circle"></span></span><span class="tim">12/12/2019 - 12:45AM</span>
+                      </label>
+
+                      <label class="track s">Packed
+                            <input type="checkbox" >
+                            <span class="checkmark far fa-circle"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                          </label>
+
+                          <label class="track s">Delivering
+                                <input type="checkbox">
+                                <span class="checkmark far fa-circle"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                              </label>
+
+                              <label class="track s">Delivered
+                                    <input type="checkbox">
+                                    <span class="checkmark far fa-circle"></span><span class="tim">12/12/2019 - 12:45AM</span>
+                                  </label>
+-->
+
+            
             </div>
     
         </div>
 
-        <div class="column col-5">
-    <div class="bulk"> <label>SUMMARY</label></div>
-    <ul class="list-group list-group-flush">
+        <div class="col col-4">
+    <div class="bulk"> <label>SUMMARY</label>
+        <p class="dash">___</p>
+    <ul class="list-group">
             <li class="list-group-item">
                 1 x Bulbasaur
             <div class="float-right">
@@ -52,36 +106,66 @@
                                 $3.99
                             </div>
                             </li>
+                        
+                            <li class="list-group-item dash dashi">
+                                ____
+                                </li>
+
+                            <li class="list-group-item">
+                                    Subtotal
+                                <div class="float-right">
+                                    $58.00
+                                </div>
+                                </li>
+
+                            <li class="list-group-item fee">
+                                Shipping fee
+                            <div class="float-right">
+                                $1.00
+                            </div>
+                            </li>
 
                     </ul>
 
-   
+   </div>
         </div>
-        <div class="column col-3">
-          <div class="bulk"> <label>TOTAL</label>
-            <h2>$30.00</h2>
-            <p style="font-size: 10px; font-weight: 500;"> INCLUDING 10% VAT AND SHIPPING FEE</p>
+        
+        <div class="col col-3">
+            <div class="bulk">
+                <label>SHIP TO</label>
+                <p class="s name">Be Sa</p>
+                <p class="s phone">0919954179</p>
+                <p class="s address">KTX khu A - DHQG TpHCM, KP6, Linh Trung, Thu Duc</p>
+                
+            </div>
+       
+              <div class="bulk" style="border-top: 1px solid #e0e0e0;">
+              <label>TOTAL</label> <span style="font-size: 10px; margin-top: 5px;" class="float-right">CASH ON DELIVERY</span>
+            <h2 class="tien">$30.00</h2>
+            <p style="font-size: 10px; margin-top: -5px;"> Including 10% VAT and shipping fee</p>
+
         </div>
+
                
     
         </div>
-        <div class="column col-1">
-            <div class="bulk besa"><label for="" class="dn ac">ACTION</label>
-                <button class="btn check" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="fas fa-check"></i></button>
-                <button class="btn cancel" data-toggle="modal" data-target="#myModal" ><i class="fas fa-times"></i></button>
-
+        <div class="col col-1" style="border-right: none; ">
+        <div class="bulk">
+            <label for="">ACTION</label>
+            <button class="btn" title="CONFIRM"><i class="far fa-check-circle fa-2x"></i></button>
+            <button class="btn" title="CANCEL" data-target="#myModal" data-toggle="modal"><i class="far fa-trash-alt fa-2x"></i></button>
         </div></div>
-
-    </div>
-    <div class="row row-track collapse" id="collapseExample">
-            <div class="column col-2">
-                <div class="bulk"> <label for="">TRACKING</label></div>
-               
-            </div>
-            <div class="column col-10">
-                <div class=" bulk track">
-
-                </div>
-            </div>
         </div>
 </div>
+
+<div id="myModal" class="modal">
+        <div class="popup">
+            <i class="far fa-question-circle fa-3x"></i>
+            <h4 class="are">Are you sure?</h4>
+            <p class="quote">This order will be canceled!</p>
+            <div class="close"  data-dismiss="modal"><i class="fas fa-times"></i></div>
+            <div class="content">
+               <button onclick="cancel()" data-dismiss="modal" class="btnn">CONFIRM</button>
+            </div>
+        </div>
+    </div>
