--- a/frontend/src/app/product-card/product-card.component.css
+++ b/frontend/src/app/product-card/product-card.component.css
@@ -4,9 +4,10 @@
     width: 12rem;
     border: none;
     margin-top: 10px;
-    border-radius: 10px;
-    transition: 0.2s ease;
+    margin-bottom: 10px;
+    border-radius: 0px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .info{
@@ -16,66 +17,85 @@
 }
 
 .old-price {
-    font-weight: 500;
     color : #b3b3b3;
     font-size: 18px;
-    margin-top: -10px;
     margin-left: 8px;
     text-decoration-line: line-through;
-}
-
-.row {
-    display: flex;
-    flex-direction: column;
-    margin-left: -10px;
 }
 
 .card-name {
     color : #555555;
     font-size: 14px;
-    font-weight: 600;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    margin-top: -20px;
     font-family: 'Roboto Mono', monospace;
+    transition: 0.1s;
+}
+.price {
+    margin-bottom: -20px;
 }
 
+.card:hover .card-name{
+    font-size: 12px;
+transform: translateY(-23px);
+}
+
+.card:hover .card-price {
+    font-size: 15px;
+    transform: translateY(-30px);
+}
 
 .card-price {
     font-weight: 700;
     color : #e73939;
     font-size: 20px;
-    margin-top: -8px;
-
+    transition: 0.1s;
 }
 
-.card-body {
-padding-top: 0;
-}
-
-.card-img-top {
-    position: relative;
-}
-
-.img {
-    background: whitesmoke;
-}
-
-.content {
+.btn {
     position: absolute;
-    color:#242424;
-    right:-30px;
-    bottom: 70px;
-    font-size: 20px;
+    color:#fff;
+    right:-50px;
+    bottom: 60px;
+    font-size: 18px;
     transition: 0.2s;
+    width: 40px;
+    height: 40px;
+    background: #d93a3a;
+    border-radius: 100px;
+    box-shadow: 0 2px 5px 0 rgba(236, 42, 42, 0.1),
+    0 5px 15px 0 rgba(236, 42, 42, 0.2);
 }
 
-.fas:after {
+.btn-black {
+position: absolute;
+color: white;
+bottom: -63px;
+font-size: 16px;
+background-color: #242424;
+width: 100%;
+height: 46px;
+border: none;
+outline: none;
+text-align: center;
+transition: 0.1s;
+cursor: pointer;
+}
+
+.card:hover .btn-black {
+    bottom: 0;
+}
+
+/*
+.btn:after {
     content: "ADD TO CART";
     display: inline-block;
     background: #555555;
     position: absolute;
-    margin-left: -26px;
-    margin-top: -40px;
+   left: 50%;
+   width: 36px;
+   margin-left: -20px;
+   top: -60px;
     border-radius: 5px;
     opacity: 0;
     color: white;
@@ -85,29 +105,32 @@ padding-top: 0;
     padding: 5px;
     transition: 0.2s ease;
 }
+*/
 
-.card:hover .content {
-    right : 12px;
+.card:hover .btn {
+    right : 0px;
+    transform: rotate(360deg);
 }
 
-.fas:hover {
-    color: #e73939;
-}
-
-.fas:hover:after {
-    opacity: 0.6;
-    margin-top: -45px;
-}
-
-.fa-star:hover {
-    color: #faea0f;
-}
-
-.card:hover{
-    box-shadow: 0 10px 10px 0 rgb(240, 240, 240);
+.btn:hover {
+    box-shadow: 0 2px 5px 0 rgba(236, 42, 42, 0.1),
+    0 5px 15px 0 rgba(236, 42, 42, 0.2),
+    0 7px 20px 0 rgba(236, 42, 42, 0.15);
+    transform: rotate(10deg);
+    background: #e25555;
     margin-top: 5px;
     cursor: pointer;
 }
+
+.btn:hover:after {
+    opacity: 0.6;
+    margin-top: 0px;
+}
+
+.card:hover{
+box-shadow: inset 0 0 0 2px #242424;
+}
+
 
 
 
