--- a/frontend/src/app/signup/signup.component.css
+++ b/frontend/src/app/signup/signup.component.css
@@ -3,6 +3,26 @@ section {
    margin-top: 20px;
 }
 
+.alert {
+   text-align: right;
+   height: 30px;
+   border: none;
+   background: transparent;
+   border-radius: 0;
+   padding-top: 5px;
+   padding-right: 5px;
+   font-weight: 600;
+}
+
+.alert-danger {
+   color: #d93a3a;
+   border-top: 3px solid #d93a3a;
+}
+
+.alert-success {
+   color: yellowgreen;
+   border-top: 3px solid yellowgreen;
+}
 
 .login-form {
    width:500px;
@@ -32,6 +52,8 @@ input {
    border-radius: 2px;
    background: #f0f0f0;
    outline: none;
+   font-weight: 600;
+   font-size: 18px;
    }
    
    input:focus{
