--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -33,6 +33,9 @@
                 type="text" 
                 class="form-control"
                 placeholder="Be Sa">  
+                <div *ngIf="name.touched && name.invalid" class="alert alert-danger">
+                        <div *ngIf="name.errors.required"> Name required</div>
+                </div>
         </div>
 
         <div class="form-group">
@@ -43,6 +46,10 @@
                 type="text" 
                 class="form-control"
                 placeholder="besa@example.com">  
+                <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
+                        <div *ngIf="email.errors.required"> Email required</div>
+                        <div *ngIf="email.errors.email"> Email must be a valid email address</div>
+                </div>
         </div>
     
         <div class="form-group">
@@ -51,8 +58,11 @@
                 formControlName="password"
                 id="password"
                 type="password" 
-                class="form-control"
-            >  
+                class="form-control"> 
+                <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
+                        <div *ngIf="password.errors.required"> Password required</div>
+                        <div *ngIf="password.errors.minlength"> Password should be minimum 6 characters</div>
+                </div>
         </div>
         <div id="wrapper">    <button class="btn">Sign Up</button>
         </div>
