--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -40,3 +40,72 @@ body::-webkit-scrollbar-thumb:active {
 .btn {
     text-transform: uppercase;
 }
+
+input[type=search]::-webkit-search-cancel-button {
+    cursor: pointer;
+    -webkit-appearance: none;
+    background-image: url("https://static.thenounproject.com/png/114046-200.png");
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 16px;
+    background-size: 20px;
+    margin-bottom: 3px;
+}
+
+    
+ul.breadcrumb {
+    background: white;
+    padding-left: 30px;
+  }
+
+ul.breadcrumb li {
+    color: #b3b3b3;
+}
+
+ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: #242424;
+    content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+    color: #242424;
+    text-decoration: none;
+  }
+
+  ul.breadcrumb li a:hover {
+    font-weight: 600;
+  }
+
+  ul.breadcrumb .back {
+      background: white;
+      border: none;
+      outline: none;
+      margin-right: 15px;
+      width: 70px;
+      height: 26px;
+      text-align: right;
+      font-weight: 900;
+      position: relative;
+  }
+
+  ul.breadcrumb .back:after {
+    position: absolute;
+    content: "\f30a";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #242424;
+    left: 10px;
+}
+
+ul.breadcrumb .back:hover:after {
+    left: 7px;
+    color: white;
+}
+
+ul.breadcrumb .back:hover {
+    background: #242424;
+    color: white;
+    font-weight: 500;
+}
+
